--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,9 @@
 sudo: false
 jdk:
-# - oraclejdk9
+  - oraclejdk10
+  - openjdk10
+  - oraclejdk9
+  - openjdk9
   - oraclejdk8
   - openjdk8
 language: clojure
