--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,6 @@
-sudo: false
 jdk:
-  - oraclejdk10
-#  - openjdk10
-  - oraclejdk9
-#  - openjdk9
-  - oraclejdk8
+  - openjdk12
+  - openjdk11
   - openjdk8
 language: clojure
 cache:
